basic filters for workers (name and hostname)

--- a/app/views/mission_control/jobs/workers/_workers_page.html.erb
+++ b/app/views/mission_control/jobs/workers/_workers_page.html.erb
@@ -9,6 +9,8 @@
   </tr>
   </thead>
 
+  <%= render partial: "mission_control/jobs/workers/filters" %>
+
   <%= render partial: "mission_control/jobs/workers/worker", collection: workers_page.records %>
 
   </tbody>
