move filters to the index view

--- a/app/views/mission_control/jobs/workers/_filters.html.erb
+++ b/app/views/mission_control/jobs/workers/_filters.html.erb
@@ -14,7 +14,7 @@
     </div>
 
     <div class="control">
-      <%= link_to "Clear", application_workers_path(MissionControl::Jobs::Current.application, hostname: nil), class: "button" %>
+      <%= link_to "Clear", application_workers_path(MissionControl::Jobs::Current.application, hostname: nil, name: nil), class: "button" %>
     </div>
   </div>
 </div>
